--- a/NewsiOS/Views/NewsTableViewCell.xib
+++ b/NewsiOS/Views/NewsTableViewCell.xib
@@ -75,6 +75,7 @@
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="link" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ftC-UK-wxW">
                                                 <rect key="frame" x="749" y="-0.5" width="22" height="21"/>
+                                                <color key="tintColor" red="0.37047544189999998" green="0.45313392349999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="22" id="WZX-t0-G5f"/>
                                                 </constraints>
