--- a/NewsiOS/Views/NewsTableViewCell.xib
+++ b/NewsiOS/Views/NewsTableViewCell.xib
@@ -10,27 +10,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="662" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="NewsiOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="835" height="662"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="245" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="NewsiOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="701" height="508"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="835" height="662"/>
+                <rect key="frame" x="0.0" y="0.0" width="701" height="508"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="F1k-my-NZ2" userLabel="Stack View Root">
-                        <rect key="frame" x="32" y="23" width="771" height="616"/>
+                        <rect key="frame" x="12" y="12" width="677" height="484"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="2ZN-d9-WXN" userLabel="Stack View Source">
-                                <rect key="frame" x="0.0" y="0.0" width="771" height="34.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="677" height="34.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mixvale.com.br" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqr-gZ-2gL">
-                                        <rect key="frame" x="0.0" y="0.0" width="771" height="14.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="677" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Redação Mix Vale" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Faa-17-C7j">
-                                        <rect key="frame" x="0.0" y="18.5" width="771" height="16"/>
+                                        <rect key="frame" x="0.0" y="18.5" width="677" height="16"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -38,16 +38,16 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="YID-Jj-JMi" userLabel="Stack View Title">
-                                <rect key="frame" x="0.0" y="155.5" width="771" height="76"/>
+                                <rect key="frame" x="0.0" y="89.5" width="677" height="76"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Segunda parcela do 13º salário tem que ser paga até segunda-feira - Mix Vale" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nsg-Tv-dAW">
-                                        <rect key="frame" x="0.0" y="0.0" width="771" height="21.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="677" height="21.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <color key="textColor" red="0.65478012249999995" green="0.095446886620000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VCc-WY-V6z">
-                                        <rect key="frame" x="0.0" y="25.5" width="771" height="50.5"/>
+                                        <rect key="frame" x="0.0" y="25.5" width="677" height="50.5"/>
                                         <string key="text">Segunda parcela do 13º salário tem que ser paga até segunda-feira Os trabalhadores com carteira assinada de todo o país vão receber a segunda parcela do 13º salário até segunda-feira (20). A primeira deve ter sido paga até o dia 30 de novembro.</string>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                         <color key="textColor" systemColor="systemGrayColor"/>
@@ -56,29 +56,26 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="zi9-ip-cmB" userLabel="Stack View Content">
-                                <rect key="frame" x="0.0" y="352" width="771" height="264"/>
+                                <rect key="frame" x="0.0" y="220" width="677" height="264"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hxw-ed-Vjq">
-                                        <rect key="frame" x="0.0" y="0.0" width="771" height="240"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hxw-ed-Vjq">
+                                        <rect key="frame" x="0.0" y="0.0" width="677" height="240"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="240" id="sYs-z4-UZr"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="qFA-rt-aDg">
-                                        <rect key="frame" x="0.0" y="244" width="771" height="20"/>
+                                        <rect key="frame" x="0.0" y="244" width="677" height="20"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10/12/2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pAF-my-WjH">
-                                                <rect key="frame" x="0.0" y="0.0" width="745" height="20"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="10/12/2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pAF-my-WjH">
+                                                <rect key="frame" x="0.0" y="0.0" width="651" height="20"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <color key="textColor" systemColor="systemGrayColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="link" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ftC-UK-wxW">
-                                                <rect key="frame" x="749" y="-0.5" width="22" height="21"/>
-                                                <color key="tintColor" red="0.37047544189999998" green="0.45313392349999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="22" id="WZX-t0-G5f"/>
-                                                </constraints>
+                                                <rect key="frame" x="655" y="-0.5" width="22" height="21"/>
+                                                <color key="tintColor" red="0.65478012249999995" green="0.09794908947" blue="0.0056571585120000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             </imageView>
                                         </subviews>
                                     </stackView>
@@ -88,10 +85,10 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="F1k-my-NZ2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="O8q-zz-E5g"/>
-                    <constraint firstItem="F1k-my-NZ2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="Vir-MA-LvQ"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="F1k-my-NZ2" secondAttribute="bottom" constant="12" id="eyX-8S-LQj"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="F1k-my-NZ2" secondAttribute="trailing" constant="12" id="ure-LZ-1aQ"/>
+                    <constraint firstAttribute="bottom" secondItem="F1k-my-NZ2" secondAttribute="bottom" constant="12" id="2D0-Sc-HgC"/>
+                    <constraint firstItem="F1k-my-NZ2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="CHS-P1-nM0"/>
+                    <constraint firstAttribute="trailing" secondItem="F1k-my-NZ2" secondAttribute="trailing" constant="12" id="HZR-fu-0mC"/>
+                    <constraint firstItem="F1k-my-NZ2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="nDx-03-tbj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
